--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,10 +10,10 @@ jobs:
       - name: Checkout master
         uses: actions/checkout@master
         
-      - name: Clone repository
-        run: git clone https://github.com/logto-io/logto
+      # - name: Clone repository
+      #   run: git clone https://github.com/logto-io/logto
 
-      - run: mv logto/** . && rm -r logto
+      # - run: mv logto/** . && rm -r logto
         
       - name: Build and publish image
         uses: ilteoood/docker_buildx@master
